--- a/BattleField/Base.lproj/Main.storyboard
+++ b/BattleField/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Skip Turn"/>
                                 <connections>
-                                    <action selector="aiTurn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3f1-gl-ijf"/>
+                                    <action selector="skipTurn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3f1-gl-ijf"/>
                                 </connections>
                             </button>
                         </subviews>
